# xml_viewer

./: Cargo.toml  README.md
examples/basic_example/: Cargo.toml  data.xml  index.html  index.js
examples/basic_example/src/: lib.rs
examples/example_without_custom_component/: Cargo.toml  index.html  index.js
examples/example_without_custom_component/src/: lib.rs
src/: component.rs  converter.rs  lib.rs
